[package]
name = "distributed-rate-limiter"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
redis = { version = "0.24", features = ["tokio-comp", "script"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]